Aplico patron de diseño al foro de VJ, ratio de imagenes mejorado

--- a/vj.html
+++ b/vj.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css">
 </head>
     <body class="VJ-body">
@@ -113,31 +114,54 @@
             </section>
         </section>
 
-        <section class="comments-section">
+        <section class="foro-section">
+            <div class="container-titulo-foro">
+                <span class="material-symbols-outlined">
+                    forum
+                </span>
+                <h3>
+                   Comentarios 
+                </h3>
+            </div>
             <div class="comment-div-input">
                 <div class="comment-div-input-textarea-div">
-                    <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
+                    <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario" class="foto-perfil">
                     <textarea placeholder="Haz un comentario..."></textarea>
                 </div>
                 <div class="comment-div-input-button-div">
                     <button>COMENTAR</button>
                 </div>
             </div>
+            
+            <hr>
+            <section class="container-comentarios">
+                <div class="comment-div">
+                    <div class="comment-container-perfil">
+                        <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario" class="foto-perfil">
+                        <h6>Tito Calderon</h6>
+                        <p class="comment-fecha">20/10/24</p>
+                    </div>
+                    <p class="comment-text">¡El 4 en línea nunca pasa de moda! Es el título de juegos que no pierden su esencia, y en este caso ¡Batman y Superman le dan un toque especial!</p>
+                </div>
 
-            <div class="comment-div">
-                <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
-                <p>¡El 4 en línea nunca pasa de moda! Es el título de juegos que no pierden su esencia, y en este caso ¡Batman y Superman le dan un toque especial!</p>
-            </div>
+                <div class="comment-div">
+                    <div class="comment-container-perfil">
+                        <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario" class="foto-perfil">
+                        <h6>Tito Calderon</h6>
+                        <p class="comment-fecha">20/10/24</p>
+                    </div>                
+                    <p class="comment-text" >¡Me encanta la idea de este juego temático! ¡Las partidas con amigos son mucho más interesantes!</p>
+                </div>
 
-            <div class="comment-div">
-                <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
-                <p>¡Me encanta la idea de este juego temático! ¡Las partidas con amigos son mucho más interesantes!</p>
-            </div>
-
-            <div class="comment-div">
-                <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario">
-                <p>¿Se puede jugar en línea? Sería genial competir con otros jugadores y demostrar quién es el mejor superhéroe.</p>
-            </div>
+                <div class="comment-div">
+                    <div class="comment-container-perfil">
+                        <img src="img/vj-img/VJ/fotoDePerfil.jpg" alt="Usuario" class="foto-perfil">
+                        <h6>Tito Calderon</h6>
+                        <p class="comment-fecha">20/10/24</p>
+                    </div>                
+                    <p class="comment-text">¿Se puede jugar en línea? Sería genial competir con otros jugadores y demostrar quién es el mejor superhéroe.</p>
+                </div>
+            </section>
         </section>
         <footer class="fat-footer">
             <div class="footer-section">
