pequeñas correcciones en links, iconos y typo del VJ

--- a/vj.html
+++ b/vj.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
     <script src="https://kit.fontawesome.com/7964d7a07e.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -44,7 +43,7 @@
                 </div>
                 <div class="titulos-section-breadscrums-div">
                     <span>
-                        <a class="breadcrums-link" href="">INICIO</a>
+                        <a class="breadcrums-link" href="home.html">INICIO</a>
                         /<a class="breadcrums-link" href="">ARCADE</a>/
                         <a class="breadcrums-link" href="">4 EN LINEA BATMAN VS SUPERMAN</a></span>
                     <h1>4 EN LINEA BATMAN VS SUPERMAN</h1>
@@ -68,18 +67,17 @@
                 </div>
                 <div class="buttons-div">
                     <div class="container-button">
-                        <button class="star-button">
-                            <img src="img/vj-img/VJ/fav-icon.webp" alt="star">
-                        </button>
-                    </div>
-                    <div class="container-button">
-                        <button class="like-button">
-                            <img src="img/vj-img/VJ/Like-icon-removebg-preview.png" alt="star">
-                        </button>
-                    </div>
-                    <div class="container-button">
                         <button class="share-button">
-                            <img src="img/vj-img/VJ/share-icon-removebg-preview.png" alt="star">
+                            <span class="material-symbols-outlined">
+                                favorite
+                            </span>
+                        </button>
+                    </div>
+                    <div class="container-button">
+                        <button class="star-button">
+                            <span class="material-symbols-outlined">
+                                share
+                            </span>
                         </button>
                     </div>
                 </div>
