hover de vj modificado, agrego feedback en boton agregado

--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@
                             <img src="./img/vj-img/xxl/xxl2.png" alt="Slugterra">
                             <div class="tag-buy">$2500</div>
                             <div class="overlay">
-                                <button class="play-btn-premium">Agregar<i class="material-symbols-outlined">add_shopping_cart</i></button>
+                                <button class="play-btn-premium add-btn">Agregar<i class="material-symbols-outlined">add_shopping_cart</i></button>
                             </div>
                         </div>
                         <div class="carousel-card-xxl">
@@ -104,7 +104,7 @@
                             <img src="./img/vj-img/xxl/xxl5.png" alt="Aftermath">
                             <div class="tag-buy">$2500</div>
                             <div class="overlay">
-                                <button class="play-btn-premium">Agregar<i class="material-symbols-outlined">add_shopping_cart</i></button>
+                                <button class="play-btn-premium add-btn">Agregar<i class="material-symbols-outlined">add_shopping_cart</i></button>
                             </div>
                         </div>
                         <div class="carousel-card-xxl">
@@ -123,7 +123,7 @@
                             <img src="./img/vj-img/xxl/xxl8.png" alt="Salvaje Oeste">
                             <div class="tag-buy">$1900</div>
                             <div class="overlay">
-                                <button class="play-btn-premium">Agregar<i class="material-symbols-outlined">add_shopping_cart</i></button>
+                                <button class="play-btn-premium add-btn">Agregar<i class="material-symbols-outlined">add_shopping_cart</i></button>
                             </div>
                         </div>
                         <div class="carousel-card-xxl">
@@ -150,7 +150,7 @@
                             <img src="./img/vj-img/xxl/xxl12.png" alt="Base Battles">
                             <div class="tag-buy">$1500</div>
                             <div class="overlay">
-                                <button class="play-btn-premium">Agregar<i class="material-symbols-outlined">add_shopping_cart</i></button>
+                                <button class="play-btn-premium add-btn">Agregar<i class="material-symbols-outlined">add_shopping_cart</i></button>
                             </div>
                         </div>
                     </div>
@@ -472,14 +472,14 @@
                             <img src="./img/vj-img/xl/xl6.png" alt="Goober Dash">
                             <div class="tag-buy">$1555</div>
                             <div class="overlay">
-                                <button class="play-btn-premium">Agregar<i class="material-symbols-outlined">add_shopping_cart</i></button>
+                                <button class="play-btn-premium add-btn">Agregar<i class="material-symbols-outlined">add_shopping_cart</i></button>
                             </div>
                         </div>
                         <div class="carousel-card-xl">
                             <img src="./img/vj-img/xl/xl7.png" alt="Miniblox">
                             <div class="tag-buy">$3999</div>
                             <div class="overlay">
-                                <button class="play-btn-premium">Agregar<i class="material-symbols-outlined">add_shopping_cart</i></button>
+                                <button class="play-btn-premium add-btn">Agregar<i class="material-symbols-outlined">add_shopping_cart</i></button>
                             </div>
                         </div>
                         <div class="carousel-card-xl">
